Add: Q2 GC Techniques for In-Memory Cache Systems (comprehensive guide).
Detailed explanation of GC techniques (Generational, Parallel, CMS, G1GC, ZGC, Shenandoah) with cache-specific context. Includes: why GC matters for cache, comparison table, decision tree, real examples (200MB cache), monitoring strategy, tuning parameters for different scenarios, and complete interview answer. Key recommendation: G1GC for most caches, ZGC for ultra-low latency systems.

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>